--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -1,19 +1,118 @@
 .container{
     width: 40%;
-
     color: white;
     background: rgb(57, 57, 228);
     border-radius: 5px;
     padding: 30px;
-    margin:auto;
+    margin: auto;
 }
 .title {
     text-align: center;
     margin-bottom: 20px;
-    font-size: 30px;
-    letter-spacing: 0,5px;
 }
-.copyIcon {
-    width: 30px;
-    height: 30px;
+.password-wrapper {
+    width: 100%;
+    height: 50px;
+}
+.password-area{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+}
+.password-area .password {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+.password-area .password input {
+    width:  100%;
+    height: 100%;
+    font-size: 20px;
+    background: azure;
+    line-height: 50px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+}
+.password-area .password .copyIcon {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    width: 50px;
+    height: 100%;
+    padding: 12px;
+    transform: translate(0, -50%);
+    background: rgb(250, 236, 108);
+    border-radius: 5px;
+    cursor: pointer;
+}
+.setting {
+    margin: 20px 0;
+}
+.customize{
+    margin: 10px 0;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.customize .checkboxes {
+    display: flex;
+}
+.left .right {
+    width: fit-content;
+}
+.right {
+    width: fit-content;
+}
+.customize .right {
+    margin-left: 30px;
+}
+.customize .checkboxes .checkbox-field {
+    margin-top: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.customize .checkboxes .checkbox-field input {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+}
+
+.customize .checkboxes .checkbox-field input:checked {
+    accent-color: rgb(250, 236, 108);
+}
+.customize .checkboxes .checkbox-field label {
+    line-height: 20px;
+}
+.slider {
+    margin: 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: 50px;
+}
+.slider .rangeValue {
+    width: 80px;
+    height: 100%;
+    font-size: 22px;
+    border-radius: 5px;
+    background-color: white;
+    color: black;
+    line-height: 50px;
+    text-align: center;
+}
+.slider .range {
+    width: calc(100%-80px);
+    height: 100%;
+    margin-left: 20px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    padding: 0 20px;
+    background-color: white;
+    display: flex;
+    align-items: center;
 }
