--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -35,6 +35,7 @@
     border-radius: 5px;
     border: none;
     outline: none;
+    text-indent: 10px;
 }
 .password-area .password .copyIcon {
     position: absolute;
